add entities and migration successful

--- a/VaccinaCare.Domain/VaccinaCare.Domain.csproj
+++ b/VaccinaCare.Domain/VaccinaCare.Domain.csproj
@@ -22,7 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
+    <Folder Include="DTOs\AuthDTO\" />
+    <Folder Include="DTOs\UserDTO\" />
     <Folder Include="Enums\" />
   </ItemGroup>
 
