--- a/VaccinaCare.API/Dockerfile
+++ b/VaccinaCare.API/Dockerfile
@@ -1,22 +1,33 @@
-# Sử dụng .NET SDK để build
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+# This stage is used when running from VS in fast mode (Default for Debug configuration)
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER $APP_UID
+WORKDIR /app
+EXPOSE 8080
+EXPOSE 8081
+
+
+# This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
+WORKDIR /src
+COPY ["VaccinaCare.API/VaccinaCare.API.csproj", "VaccinaCare.API/"]
+COPY ["VaccinaCare.Application/VaccinaCare.Application.csproj", "VaccinaCare.Application/"]
+COPY ["VaccinaCare.Domain/VaccinaCare.Domain.csproj", "VaccinaCare.Domain/"]
+COPY ["VaccinaCare.Repository/VaccinaCare.Repository.csproj", "VaccinaCare.Repository/"]
+RUN dotnet restore "./VaccinaCare.API/VaccinaCare.API.csproj"
+COPY . .
+WORKDIR "/src/VaccinaCare.API"
+RUN dotnet build "./VaccinaCare.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# This stage is used to publish the service project to be copied to the final stage
+FROM build AS publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./VaccinaCare.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+FROM base AS final
 WORKDIR /app
-
-# Copy file csproj vào container để build
-COPY *.csproj ./
-RUN dotnet restore
-
-# Copy toàn bộ source code và build
-COPY . ./
-RUN dotnet publish -c Release -o out
-
-# Sử dụng .NET runtime để chạy app
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
-WORKDIR /app
-COPY --from=build /app/out .
-
-# Set cổng chạy app
-EXPOSE 5000
-EXPOSE 5001
-
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "VaccinaCare.API.dll"]
