--- a/VaccinaCare.API/VaccinaCare.API.csproj
+++ b/VaccinaCare.API/VaccinaCare.API.csproj
@@ -4,10 +4,21 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>db25a665-92bf-472d-8bff-93fb60c00ff3</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
+
+  <ItemGroup>
+  <ProjectReference Include="..\VaccinaCare.Application\VaccinaCare.Application.csproj" />
+  <ProjectReference Include="..\VaccinaCare.Domain\VaccinaCare.Domain.csproj" />
+</ItemGroup>
+
 
 </Project>
