--- a/VaccinaCare.Application/VaccinaCare.Application.csproj
+++ b/VaccinaCare.Application/VaccinaCare.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\VaccinaCare.Domain\VaccinaCare.Domain.csproj" />
     <ProjectReference Include="..\VaccinaCare.Repository\VaccinaCare.Repository.csproj" />
   </ItemGroup>
 
