vui vãi giao tiếp db vs docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,29 @@
-services:
-  vaccinacare.api:
-    image: ${DOCKER_REGISTRY-}vaccinacareapi
+﻿services:
+  vaccinacare-api:
     build:
-      context: .
+      context: . # Thư mục gốc chứa Dockerfile
       dockerfile: VaccinaCare.API/Dockerfile
+    image: vaccinacareapi
+    ports:
+      - "5000:5000"
+    depends_on: 
+      - vaccinacare-database
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "ConnectionStrings__DefaultConnection=Host=goodsdesignapi-database;Port=5432;Database=goodsdesignapi;Username=postgres;Password=YourStrong!Passw0rd;"
+      - "ConnectionStrings__DefaultConnection=Server=vaccinacare-database;Database=VaccinaCareDb;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;Encrypt=False"
 
+  vaccinacare-database:
+    image: mcr.microsoft.com/mssql/server:2019-latest
+    container_name: vaccinacare-database
+    restart: always
+    ports:
+      - "1433:1433"
+    environment:
+      - ACCEPT_EULA=Y
+      - MSSQL_SA_PASSWORD=YourStrong!Passw0rd
+    volumes:
+      - sqlserver-data:/var/opt/mssql
+
+volumes:
+  sqlserver-data:
+    driver: local
