--- a/VaccinaCare.API/VaccinaCare.API.csproj
+++ b/VaccinaCare.API/VaccinaCare.API.csproj
@@ -10,7 +10,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
@@ -18,6 +17,7 @@
   <ItemGroup>
   <ProjectReference Include="..\VaccinaCare.Application\VaccinaCare.Application.csproj" />
   <ProjectReference Include="..\VaccinaCare.Domain\VaccinaCare.Domain.csproj" />
+  <ProjectReference Include="..\VaccinaCare.Repository\VaccinaCare.Repository.csproj" />
 </ItemGroup>
 
 
