--- a/VaccinaCare.API/appsettings.json
+++ b/VaccinaCare.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DEVPHUCTRANN; Database=VaccinaCareDb; User Id=sa; Password=12345; TrustServerCertificate=True;"
+  },
 
   "Logging": {
     "LogLevel": {
