--- a/VaccinaCare.API/appsettings.json
+++ b/VaccinaCare.API/appsettings.json
@@ -1,5 +1,7 @@
 {
-  
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=vaccinacare-database;Database=VaccinaCareDb;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;Encrypt=False"
+  },
 
   "Logging": {
     "LogLevel": {
