--- a/VaccinaCare.Application/VaccinaCare.Application.csproj
+++ b/VaccinaCare.Application/VaccinaCare.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\VaccinaCare.Repository\VaccinaCare.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.9.0" />
+  </ItemGroup>
+
 </Project>
