--- a/VaccinaCare.Application/VaccinaCare.Application.csproj
+++ b/VaccinaCare.Application/VaccinaCare.Application.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.9.0" />
+    <PackageReference Include="Minio" Version="6.0.4" />
   </ItemGroup>
 
 </Project>
