--- a/VaccinaCare.Application/VaccinaCare.Application.csproj
+++ b/VaccinaCare.Application/VaccinaCare.Application.csproj
@@ -7,13 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\VaccinaCare.Domain\VaccinaCare.Domain.csproj"/>
-        <ProjectReference Include="..\VaccinaCare.Repository\VaccinaCare.Repository.csproj"/>
+        <ProjectReference Include="..\VaccinaCare.Domain\VaccinaCare.Domain.csproj" />
+        <ProjectReference Include="..\VaccinaCare.Repository\VaccinaCare.Repository.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="MailKit" Version="4.9.0"/>
-        <PackageReference Include="Minio" Version="6.0.4"/>
+        <PackageReference Include="LINQKit" Version="1.3.8" />
+        <PackageReference Include="MailKit" Version="4.9.0" />
+        <PackageReference Include="Minio" Version="6.0.4" />
     </ItemGroup>
 
 </Project>
