--- a/VaccinaCare.Domain/VaccinaCare.Domain.csproj
+++ b/VaccinaCare.Domain/VaccinaCare.Domain.csproj
@@ -23,4 +23,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DTOs\VaccineDTOs\Request\" />
+    </ItemGroup>
+
 </Project>
