--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@
       - "JWT__SecretKey=VaccinaCare_SECRETKEY_SIEUCAPBAOMAT_VAYMACHUADU16KYTU"
       - "JWT__Issuer=VaccinaCare_Issuer"
       - "JWT__Audience=VaccinaCare_Audience"
-      - "Payment__VnPay__ReturnUrl="
+      - "Payment__VnPay__ReturnUrl=https://vaccina-care-fe.vercel.app/payment-success"
       - "Payment__VnPay__PaymentUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
       - "Payment__VnPay__TmnCode=O7RXN745"
       - "Payment__VnPay__HashSecret=CTSEWKH8ZGNRYE8GYH9H4UW3H5W097HB"
