--- a/VaccinaCare.Application/VaccinaCare.Application.csproj
+++ b/VaccinaCare.Application/VaccinaCare.Application.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="LINQKit" Version="1.3.8"/>
         <PackageReference Include="MailKit" Version="4.9.0"/>
         <PackageReference Include="Minio" Version="6.0.4"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
         <PackageReference Include="VNPAY.NET" Version="8.5.0"/>
     </ItemGroup>
 
