--- a/VaccinaCare.API/appsettings.json
+++ b/VaccinaCare.API/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=103.211.201.162,1433;Database=VaccinaCareDb;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;Encrypt=False;MultipleActiveResultSets=True"
+
+    //BACKUP CONNECTIONSTRING
+    // "DefaultConnection": "Server=DEVPHUCTRANN;Database=VaccinaCareDb;User=sa;Password=12345;TrustServerCertificate=True;Encrypt=False;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
