fix secret leak

--- a/VaccinaCare.API/appsettings.Development.json
+++ b/VaccinaCare.API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=103.211.201.162,1433;Database=VaccinaCareDb;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;Encrypt=False;"
+    //  "BackupConnection": "Server=DEVPHUCTRANN;Database=VaccinaCareDb;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
