--- a/VaccinaCare.Application/VaccinaCare.Application.csproj
+++ b/VaccinaCare.Application/VaccinaCare.Application.csproj
@@ -7,16 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\VaccinaCare.Domain\VaccinaCare.Domain.csproj"/>
-        <ProjectReference Include="..\VaccinaCare.Repository\VaccinaCare.Repository.csproj"/>
+        <ProjectReference Include="..\VaccinaCare.Domain\VaccinaCare.Domain.csproj" />
+        <ProjectReference Include="..\VaccinaCare.Repository\VaccinaCare.Repository.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="LINQKit" Version="1.3.8"/>
-        <PackageReference Include="MailKit" Version="4.9.0"/>
-        <PackageReference Include="Minio" Version="6.0.4"/>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
-        <PackageReference Include="VNPAY.NET" Version="8.5.0"/>
+        <PackageReference Include="LINQKit" Version="1.3.8" />
+        <PackageReference Include="MailKit" Version="4.9.0" />
+        <PackageReference Include="Minio" Version="6.0.4" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="payOS" Version="1.0.9" />
+        <PackageReference Include="VNPAY.NET" Version="8.5.0" />
     </ItemGroup>
 
 </Project>
