--- a/VaccinaCare.API/appsettings.json
+++ b/VaccinaCare.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "Vnpay": {
+    "TmnCode": "G0RKSB25",
+    "HashSecret": "6D7RDBZYP0EDFZQWN8JK3AYQT35Q5QOV", 
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "https://vaccina-care-fe.vercel.app/payment-success",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
