success create link vnpay

--- a/VaccinaCare.API/appsettings.json
+++ b/VaccinaCare.API/appsettings.json
@@ -1,14 +1,20 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=103.211.201.162,1433;Database=VaccinaCareDb;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;Encrypt=False;"
+    //  "BackupConnection": "Server=DEVPHUCTRANN;Database=VaccinaCareDb;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;Encrypt=False;"
+  },
   "Vnpay": {
     "TmnCode": "G0RKSB25",
     "HashSecret": "6D7RDBZYP0EDFZQWN8JK3AYQT35Q5QOV", 
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
     "Command": "pay",
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "https://vaccina-care-fe.vercel.app/payment-success",
-    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html"
+    "PaymentBackReturnUrl": "https://vaccina-care-fe.vercel.app/payment-success"
   },
+  "TimeZoneId": "SE Asia Standard Time",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
