Payment record not found.

--- a/VaccinaCare.API/appsettings.json
+++ b/VaccinaCare.API/appsettings.json
@@ -11,7 +11,7 @@
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "https://vaccina-care-fe.vercel.app/payment-success"
+    "PaymentBackReturnUrl": "http://localhost:5000/api/payments"
   },
   "TimeZoneId": "SE Asia Standard Time",
   "Logging": {
