--- a/VaccinaCare.API/appsettings.json
+++ b/VaccinaCare.API/appsettings.json
@@ -11,7 +11,7 @@
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "https://ae-tao-fullstack-api.site/api/payments"
+    "PaymentBackReturnUrl": "http://localhost:5000/api/payments/callback" 
   },
   "TimeZoneId": "SE Asia Standard Time",
   "Logging": {
