--- a/VaccinaCare.API/VaccinaCare.API.csproj
+++ b/VaccinaCare.API/VaccinaCare.API.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
         <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.3" />
         <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="15.1.3" />
+        <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
         <PackageReference Include="HotChocolate.Data.EntityFramework" Version="15.1.3" />
         <PackageReference Include="HotChocolate.Diagnostics" Version="15.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0" />
